Fixed line break in navigation options div.

--- a/static/styles/home_page/home_page_navigation.css
+++ b/static/styles/home_page/home_page_navigation.css
@@ -82,7 +82,7 @@
 
 .option-link-div, .option-last-link-div {
     display: inline-block;
-    width: 140px;
+    width: 147px;
     height: 100%;
     line-height: 100%;
     vertical-align: middle;
@@ -114,7 +114,7 @@
 
 .navigation-link-options-div {
     float: left;
-    width: 140px;
+    width: 147px;
     background-color: var(--base-font-color);
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
